@@ -2,10 +2,11 @@
       <table border="0" cellpadding="0" cellspacing="2" width="100%">
         <tbody>
           <tr>
-            <td><i>This Site Hosted by</i> <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=599&amp;type=1" alt="SourceForge.net Logo" border="0" height="31" width="88"></a></td>
-            <td><a href="http://validator.w3.org/check?uri=referer"><img style="border: 0px solid ; width: 88px; height: 31px;" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional"></a><br />
+            <td><i>This site is hosted by</i> <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=599&amp;type=1" alt="SourceForge.net Logo" border="0" height="31" width="88" /></a></td>
+            <td>
+            <a href="http://validator.w3.org/check?uri=referer"><img style="border: 0px solid ; width: 88px; height: 31px;" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" /></a>
             <a href="http://jigsaw.w3.org/css-validator/">
-            <img style="border: 0px solid ; width: 88px; height: 31px;" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"></a></td>
+            <img style="border: 0px solid ; width: 88px; height: 31px;" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></td>
           </tr>
           <tr>
             <td><br />
