@@ -1,15 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
   <title>SDCC - Nightly Snapshots</title>
-  <link type="text/css" href="style.css" rel="stylesheet">
+  <link type="text/css" href="style.css" rel="stylesheet" />
 </head>
 <body bgcolor="white" link="teal" vlink="#483d8b">
   <div align="left">
     <h1>SDCC - Nightly Snapshots</h1>
-
-    <p>
     <table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="white">
     <tbody>
       <tr>
