@@ -1,3 +1,8 @@
+2005-12-12 Borut Razem <borut.razem AT siol.net>
+
+	* snap_header.php, footer.php, index.php, links.php, snap.php:
+	  XHTML 1.0 Transitional
+
 2005-11-25 Borut Razem <borut.razem AT siol.net>
 
 	* previous.php, snap_footer.php, footer.php: added, common footer
